navber and banneer section

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,133 @@
-*{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    text-decoration: none;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-decoration: none;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+.btn-primary {
+  border-radius: 41px;
+  background: #e02c6d;
+  font-weight: 700;
+  color: #fff;
+  font-size: 16px;
+  padding: 10px 24px;
+  align-items: flex-start;
+  cursor: pointer;
+}
+
+/* navbar start */
+nav {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+}
+nav h2 {
+  font-weight: 700;
+  color: #3a3a3a;
+  font-size: 1.5rem;
+}
+
+nav ul {
+  display: flex;
+  gap: 20px;
+}
+nav li a {
+  font-size: 16px;
+  font-weight: 600;
+  color: #3a3a3a;
+}
+.font-awesome-icon {
+  font-size: 1rem;
+  margin-right: 20px;
+}
+.font-awesome-icon i {
+  margin-right: 20px;
+  font-size: 1rem;
+}
+/* navbar end */
+
+/* banenr section start */
+.banner-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: auto;
+  height: 100vh;
+}
+.banner-image {
+  background-image: url("/images/Circle\ design.svg");
+}
+.banner-content h2 {
+  color: #3a3a3a;
+  font-size: 3.25rem;
+  font-weight: 700;
+  margin-left: 120px;
+}
+.banner-content p {
+  color: #3a3a3a;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 600;
+  margin-left: 120px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.banner-content button{
+    margin-left: 120px;
+}
+/* banenr section end */
+
+/* brand section start */
+.brand-image{
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+    margin: 50px 200px;
+}
+/* brand section end */
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:576px) {
+    nav{
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
+    .banner-container{
+        flex-direction: column-reverse;
+    }
+    .banner-content{
+        margin-top: 100px;
+        margin-right: 100px;
+    }
+    .banner-image{
+        margin-top: 600px;
+    }
+    .banner-image img{
+        width: 80%;
+    }
+    .brand-image{
+       display: grid;
+       grid-template-columns: repeat(2, 1fr);
+        margin-top: 550px;
+    }
+}
+
+@media screen and (min-width:577px) and (max-width:960px) {
+    nav{
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
 }
