--- a/CSS/style.css
+++ b/CSS/style.css
@@ -166,8 +166,12 @@ nav li a {
   }
   .brand-image {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     margin-top: 550px;
+  }
+  .popular-container{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
