feature section responsive

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -154,6 +154,7 @@ nav li a {
   align-items: center;
   gap: 50px;
 }
+
 .feature-content h2 {
   color: #0a0826;
   font-size: 38px;
@@ -196,6 +197,12 @@ nav li a {
   .popular-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+  }
+  .feature-container{
+    flex-direction: column;
+  }
+  .feature-image img{
+    width: 90%;
   }
 }
 
